--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,19 @@
-<% @recipes.each do |recipe| %>
-  <%= recipe.inspect %>
-<% end %>
+<div class="recipes_container">
+  <h2>Recipe list:</h2>
+  <div class="recipe_list">
+    <% if @recipes.blank? %>
+      <h2>No recipes</h2>
+    <% else %>
+      <% @recipes.each do |recipe| %>
+      <div class="recipe">
+        <%= link_to recipe_path(recipe.id) do %>
+          <img src="<%= recipe.photo.url %>" alt="Recipe's photo">
+        <% end %>
+        <div class="recipe_title">
+          <h3><%= link_to recipe.title, recipe_path(recipe.id) %></h3>
+        </div>
+      </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
